fix auth, fix text wrap on sent page

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,6 +7,9 @@ a {
 html {
 	background-color: #FFEFD5;
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	margin: 0;
+    word-wrap: break-word;
+    overflow-x: hidden;
 }
 main {
 	max-width: 100vh;
